# centurion

./: .appveyor.yml  .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile  LICENSE  README.md  assemble_sources.bat  fresh_doxygen.bat  lgtm.yml  open_docs.bat  travis.yml  vcpkg.json
demo/: CMakeLists.txt  demo_main.cpp
examples/: CMakeLists.txt
examples/basic-rendering/: CMakeLists.txt  basic_rendering.cpp  demo.cpp
examples/dynamic-configuration/: CMakeLists.txt  demo.cpp  dynamic_configuration.cpp
examples/event-dispatcher/: CMakeLists.txt  demo.cpp  event_dispatcher.cpp
examples/event-handler/: CMakeLists.txt  demo.cpp
examples/font/: CMakeLists.txt  demo.cpp
examples/message-box/: CMakeLists.txt  demo.cpp
examples/minimal-program/: CMakeLists.txt  demo.cpp  minimal_program.cpp
examples/music/: CMakeLists.txt  demo.cpp  music.cpp
examples/responsive-window/: CMakeLists.txt  demo.cpp  responsive_window.cpp
lib/: CMakeLists.txt
lib/entt/: fwd.hpp  hashed_string.hpp
lib/namedtype/: crtp.hpp  named_type.hpp  named_type_impl.hpp  underlying_functionalities.hpp
lib/x64/Debug/: Centurion.idb  Centurion.lib
lib/x86/Debug/: Centurion.lib
src/: CMakeLists.txt  audio_device_event.cpp  battery.cpp  battery.hpp  blend_mode.cpp  blend_mode.h  bool_converter.h  centurion.cpp  centurion.h  centurion.hpp  centurion_api.h  centurion_cfg.hpp  centurion_exception.cpp  centurion_exception.h  clipboard.hpp  color.cpp  color.h  color.hpp  colors.cpp  colors.h  colors.hpp  controller_axis_event.cpp  controller_button_event.cpp  controller_device_event.cpp  cpu.cpp  ctn_abstract_window.cpp  ctn_centurion.cpp  ctn_event.cpp  ctn_font.cpp  ctn_fullscreen_window.cpp  ctn_image_impl.cpp  ctn_input_dispatcher.cpp  ctn_key_event.cpp  ctn_key_listener_composite.cpp  ctn_key_stroke.cpp  ctn_mouse_event.cpp  ctn_mouse_listener_composite.cpp  ctn_mouse_state.cpp  ctn_music.cpp  ctn_point.cpp  (+85 more)
src/audio/: music.cpp  sound_effect.cpp
src/centurion/: CMakeLists.txt  animation.hpp  area.hpp  audio.hpp  audio_events.hpp  base_path.hpp  battery.hpp  blend_mode.hpp  button_state.hpp  byte_order.hpp  cast.hpp  centurion.hpp  centurion_cfg.hpp  clipboard.hpp  color.hpp  colors.hpp  common.hpp  compiler.hpp  concurrency.hpp  condition.hpp  controller.hpp  controller_events.hpp  core.hpp  counter.hpp  cpu.hpp  cursor.hpp  czstring.hpp  endian.hpp  event.hpp  event_base.hpp  event_dispatcher.hpp  event_type.hpp  events.hpp  exception.hpp  features.hpp  file.hpp  filesystem.hpp  font.hpp  font_cache.hpp  fonts.hpp  (+68 more)
src/centurion/audio/: CMakeLists.txt  channels.hpp  fade_status.hpp  mixer.hpp  music.hpp  music_type.hpp  sound_effect.hpp  sound_fonts.hpp
src/centurion/common/: CMakeLists.txt  errors.hpp  literals.hpp  logging.hpp  math.hpp  memory.hpp  primitives.hpp  result.hpp  sdl_string.hpp  traits.hpp  utils.hpp  version.hpp
src/centurion/compiler/: compiler.hpp  features.hpp
src/centurion/concurrency/: CMakeLists.txt  condition.hpp  locks.hpp  mutex.hpp  semaphore.hpp  thread.hpp
src/centurion/core/: cast.hpp  common.hpp  compiler.hpp  (+26 more)
src/core/: centurion.cpp  centurion_exception.cpp  exception.cpp
src/detail/: any_eq.hpp  hints_impl.hpp  max.hpp  owner_handle_api.hpp
src/event/: audio_device_event.cpp  controller_axis_event.cpp  controller_button_event.cpp  controller_device_event.cpp  dollar_gesture_event.cpp  drop_event.cpp  event.cpp  joy_axis_event.cpp  joy_ball_event.cpp  joy_button_event.cpp  joy_device_event.cpp  joy_hat_event.cpp  keyboard_event.cpp  mouse_button_event.cpp  mouse_motion_event.cpp  mouse_wheel_event.cpp  multi_gesture_event.cpp  quit_event.cpp  text_editing_event.cpp  text_input_event.cpp  touch_finger_event.cpp  window_event.cpp
src/graphics/: basic_renderer.cpp  color.cpp  cursor.cpp  font.cpp  font_cache.cpp  graphics_drivers.cpp  message_box.cpp  message_box_button.cpp  message_box_color_scheme.cpp  renderer.cpp  renderer_base.cpp  renderer_handle.cpp  sharing_texture.cpp  surface.cpp  texture.cpp  window.cpp  window_handle.cpp  window_utils.cpp
src/input/: controller.cpp  game_controller.cpp  joystick.cpp  joystick_handle.cpp  key_code.cpp  key_state.cpp  mouse_state.cpp  scan_code.cpp  touch.cpp
src/misc/: error.cpp  log.cpp  thread.cpp
src/system/: base_path.cpp  battery.cpp  clipboard.cpp  paths.cpp  platform.cpp  pref_path.cpp  screen.cpp
src/thread/: condition.cpp  mutex.cpp  scoped_lock.cpp  semaphore.cpp  thread.cpp  try_lock.cpp
test/: CMakeLists.txt
test/mock/: CMakeLists.txt
test/mocked-tests/: CMakeLists.txt  core_mocks.cpp  core_mocks.hpp  mixer_mocks.cpp  mixer_mocks.hpp  test_main.cpp  thread_mocks.cpp  thread_mocks.hpp
test/mocks/: CMakeLists.txt  controller_test.cpp  core_mocks.cpp  core_mocks.hpp  mixer_mocks.cpp  mixer_mocks.hpp  test_main.cpp  thread_mocks.cpp  thread_mocks.hpp
test/resources/: CREDITS.txt
test/unit/: CMakeLists.txt
test/unit-tests/: CMakeLists.txt  serialization_utils.hpp  test_main.cpp  typed_test_macros.hpp
test/unittests/: CMakeLists.txt  area_test.cpp  audio_device_event_test.cpp  audio_test.cpp  base_event_test.cpp  battery_test.cpp  blend_mode_test.cpp  bool_converter_test.cpp  centurion_exception_test.cpp  clipboard_test.cpp  color_test.cpp  common_event_test.cpp  condition_test.cpp  controller_axis_event_test.cpp  controller_axis_test.cpp  controller_button_event_test.cpp  controller_button_test.cpp  controller_device_event_test.cpp  controller_test.cpp  counter_test.cpp  cpu_test.cpp  cursor_test.cpp  dollar_gesture_event_test.cpp  drop_event_test.cpp  error_test.cpp  event_test.cpp  exception_test.cpp  font_cache_test.cpp  font_test.cpp  game_controller_axis_test.cpp  game_controller_button_test.cpp  game_controller_test.cpp  game_loop_test.cpp  hints_test.cpp  image_generator_test.cpp  image_test.cpp  joy_axis_event_test.cpp  joy_ball_event_test.cpp  joy_button_event_test.cpp  joy_device_event_test.cpp  (+56 more)
tests/: CMakeLists.txt
tests/mocked-tests/: CMakeLists.txt
tests/unit-tests/: CMakeLists.txt
(+1523 files in other folders)
